ContextTrackingExecutor: keep trackers as a List instead of an Array
bump major version due to API change